objects/PF11_Notes__c.object
<CustomObject>
    <description>Raw copy of notes entered in Collections Host PF11 screen.</description>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collector_Id__c</fullName>
        <defaultValue>$User.Collection_User_ID__c</defaultValue>
        <label>Collector Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Financial Account Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>PF11 Notes</relationshipLabel>
        <relationshipName>PF11_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_10__c</fullName>
        <label>Notes 10</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_11__c</fullName>
        <label>Notes 11</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_12__c</fullName>
        <label>Notes 12</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Errors__c</fullName>
        <label>Validation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>PF11 Notes</label>
    <nameField>
        <label>PF11 Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PF11 Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>